fixed list spacing

--- a/app/assets/stylesheets/style/_lists.sass
+++ b/app/assets/stylesheets/style/_lists.sass
@@ -1,4 +1,5 @@
 ul
+  list-style: none
   &.list
     padding: 0
     li
